Fixed text wrapping in text buttons and made buttons less verbose (and therefore more clear and less big)

--- a/src/MoneyApps/MoneyApp.css
+++ b/src/MoneyApps/MoneyApp.css
@@ -9,6 +9,7 @@
 
 .MoneyApp .card-block a.btn[role="button"] {
   margin: 10px;
+  white-space: normal;
 }
 
 /* Source: https://stackoverflow.com/a/16447619/1360295 */
